<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_kpu"
        android:layout_marginBottom="8dp"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_information"
        android:layout_marginBottom="8dp"
        android:text="@string/informasi"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_entry"
        android:layout_marginBottom="8dp"
        android:text="@string/entri_data"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_lihat_data"
        android:layout_marginBottom="8dp"
        android:text="@string/lihat_data"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_location"
        android:layout_marginBottom="8dp"
        android:text="@string/cek_lokasi"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_logout"
        android:layout_marginBottom="8dp"
        android:text="@string/logout"/>
</LinearLayout>